# genai-chat-bot-backend

./: .env.example  .gitignore  CHROMADB_MIGRATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  MIGRATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  pyproject.toml  railway.json  railway.toml  requirements.txt  start.sh
.github/workflows/: ci-cd.yml
AINews/: daily_summary.md  monthly_summary.md  weekly_summary.md
app/: instrumentation.py  main.py
app/common/: logger.py
app/database/: chroma_manager.py  lightweight_chroma_manager.py
app/factories/: llm_factory.py
app/graph/: enhanced_graph_builder.py
app/nodes/: ai_news_node.py  chatbot_with_Tool_node.py  enhanced_ai_news_node.py  enhanced_chatbot_node.py
app/repositories/: chroma_repository.py  optimized_chroma_repository.py
app/services/: chat_service.py  news_service.py
app/state/: enhanced_state.py  state.py
app/tools/: search_tool.py
tests/: test_api_endpoints.py  test_benchmarks.py  test_chat_basic.py  test_factory_services.py  test_health.py  test_news.py
